# second

./: AT.h  CMakeLists.txt  antans.txt  at1.txt  class.cpp  class.h  class_hori.cpp  class_hori.h  class_vert.cpp  class_vert.h  data.txt  factory.h  factory_hori.h  factory_vert.h  functions.cpp  functions.h  hori.txt  main.cpp  operators.cpp  operators.h  rez.txt  time_test.cpp  time_test.h  vert.txt
